plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.main'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    //mysql connector
    runtimeOnly 'com.mysql:mysql-connector-j'
    //junit test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    //devtools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    //spring boot-web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
    //security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    //OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.610'
    //email 인증
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    //Jackson 의존성
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
}

tasks.named('test') {
    useJUnitPlatform()
}